--- a/src/main/resources/css/settingsStyleSheet.css
+++ b/src/main/resources/css/settingsStyleSheet.css
@@ -1,16 +1,13 @@
 
 .dialog-pane {
-  "-fx-background-color: rgba(255, 255, 255, 0.9);"
-  -fx-background-radius: 20px;
+  -fx-background-color: rgba(255, 255, 255, 0.9);
   -fx-border-width: 3px;
-  -fx-border-radius: 20px;
-  -fx-border-color: #d4af37;
+  -fx-border-color: #FFE0BD;
 }
 
 .dialog-pane .label {
   -fx-text-fill: #7F5539;
   -fx-font-family: "Times New Roman";
-  -fx-text-alignment: center;
 }
 
 .dialog-pane .button {
@@ -21,7 +18,6 @@
   -fx-font-size: 16px;
   -fx-border-radius: 50px;
   -fx-padding: 8px 16px;
-  -fx-alignment: center;
 }
 
 .dialog-pane .button:focused {
