--- a/src/main/resources/css/settingsStyleSheet.css
+++ b/src/main/resources/css/settingsStyleSheet.css
@@ -1,13 +1,15 @@
-
 .dialog-pane {
-  -fx-background-color: rgba(255, 255, 255, 0.9);
+  -fx-background-radius: 22px;
   -fx-border-width: 3px;
-  -fx-border-color: #FFE0BD;
+  -fx-border-radius: 20px;
+  -fx-border-color: #d4af37;
 }
 
 .dialog-pane .label {
   -fx-text-fill: #7F5539;
   -fx-font-family: "Times New Roman";
+  -fx-text-alignment: center;
+  -fx-background-radius: 20px;
 }
 
 .dialog-pane .button {
@@ -18,6 +20,7 @@
   -fx-font-size: 16px;
   -fx-border-radius: 50px;
   -fx-padding: 8px 16px;
+  -fx-alignment: center;
 }
 
 .dialog-pane .button:focused {
@@ -42,6 +45,7 @@
   -fx-background-color: #FFC799;
   -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.6), 5, 0, 0, 1);
 }
+
 .dialog-pane .button:default:focused {
   -fx-border-color: black;
 }
