Added A newGame menu to chose if you wanna make a newgmae or creat a new story

--- a/src/main/resources/css/newGameDialog.css
+++ b/src/main/resources/css/newGameDialog.css
@@ -8,6 +8,7 @@
 
 .dialog-pane .label {
   -fx-text-fill: #7F5539;
+  -fx-font-size: 20px;
   -fx-font-family: "Times New Roman";
   -fx-text-alignment: center;
   -fx-background-radius: 20px;
